--- a/index.html
+++ b/index.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY FIRST PRACTICE PROJECT</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Space+Grotesk:wght@300..700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/project.css">
+
 </head>
+
 <body>
-    <header>
-        
+    <header class="header">
+        <nav class="nav-bar">
+
+            <h2 class="comic-font brand"> <span class="color"><span class="b">B</span>4</span> STYLE</h2>
+
+            <ul class="comic-font text">
+                <li>
+                    <a href="">About</a>
+                </li>
+                <li>
+                    <a href="">Collection</a>
+                </li>
+                <li>
+                    <a href="">Contact</a>
+                </li>
+                <li>
+                    <a class="colors" href="login.html">Login</a>
+                </li>
+            </ul>
+
+
+        </nav>
+
+        <section class="banner">
+
+            <div class="banner-head">
+                <h3 class=" hi space-font">Hi, I am </h3>
+                <h2 class="hi my-name space-font">Mustafa</h2>
+
+                <p class=" brand-subtitle space-font">"At B4 Style, we believe style speaks louder than words.
+                    Unleash your identity through bold and timeless fashion." </p>
+
+                <button class="btn comic-font" type="button">Shop Now</button>
+            </div>
+
+            <div class="my-img">
+                <img src="images/remove bg.png" alt="">
+            </div>
+
+        </section>
+
     </header>
-    
+
     <main>
 
     </main>
@@ -19,4 +73,5 @@
     </footer>
 
 </body>
+
 </html>
