added on main section all the tag all the style and added full html and css file change new update just add all and  added other html file style like collection.html and more over style just add all the tag,color,images,everything just add

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact B4 style  </title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
-    
+    <nav class="nav-bar">
+
+            <h2 class="comic-font brand"> <span class="color"><span class="b">B</span>4</span> STYLE</h2>
+
+            <ul class="comic-font text">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="collection.html">Collection</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a class="colors" href="login.html">Login</a>
+                </li>
+            </ul>
+
+
+        </nav>
 </body>
 </html>
