--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
             <ul class="comic-font text">
                 <li>
-                    <a href="">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="">Collection</a>
+                    <a href="collection.html">Collection</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
                     <a class="colors" href="login.html">Login</a>
@@ -65,6 +65,74 @@
     </header>
 
     <main>
+
+        <section class="space-font collection">
+
+            <div class="new-collection">
+
+                <h1 class="heading ">OUR LATEST COLLECTION</h1>
+                <p class="subtitle-new space-font">Explore our latest arrivals—fresh, bold, and designed for everyday confidence. From statement pieces to street-smart essentials, this collection is made for those born to stand out !</p>
+
+<hr>    
+            </div>
+
+           <div class="main-container">
+
+             <div class="card-container">
+
+                <div class="style-card">
+                    <img src="images/black.png" alt="">
+                    <h1 class="product">Black Drop-Shoulder </h1>
+                    <h2 class="price">Price :350$ </h2>
+                    <button class="buy" type="button">BUY NOW</button>
+                </div>
+
+                <div class="style-card">
+                    <img src="images/green.png" alt="">
+                    <h1 class="product" >Green Drop-Shoulder</h1>
+
+                    <h2 class="price">Price :350$ </h2>
+                    <button class="buy" type="button">BUY NOW</button>
+                </div>
+
+                <div class="style-card">
+                    <img src="images/yellow.png" alt="">
+                    <h1 class="product">Yellow Drop-Shoulder</h1>
+                   <h2 class="price">Price :350$ </h2>
+                  <button class="buy" type="button">BUY NOW</button>
+                </div>
+
+
+                <div class="style-card">
+                    <img src="images/white.png" alt="">
+                    <h1 class="product">White Drop-Shoulder</h1>
+                   <h2 class="price">Price :350$ </h2>
+                   <button class="buy" type="button">BUY NOW</button>
+                </div>
+
+
+                <div class="style-card">
+                    <img src="images/blue.png" alt="">
+                    <h1 class="product">Blue Drop-Shoulder</h1>
+                  <h2 class="price">Price :350$ </h2>
+                   <button class="buy" type="button">BUY NOW</button>
+                </div>
+
+                <div class="style-card">
+                    <img src="images/chocholate.png" alt="">
+                    <h1 class="product">Chocolate Drop-Shoulder</h1>
+                  <h2 class="price">Price :350$ </h2>
+                   <button class="buy" type="button">BUY NOW</button>
+                </div>
+          
+
+            </div>
+
+           </div>
+
+
+
+        </section>
 
     </main>
 
