--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login info in B4 Style </title>
+    <link rel="stylesheet" href="styles/nav.css">
     <style>
         .comic-font {
             font-family: "Comic Relief", system-ui;
@@ -66,11 +67,11 @@
 
         .one {
             width: 90%;
-            padding-top: 8px;
-            padding-bottom: 8px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
 
-        span {
+       .com {
             color: rgb(184, 184, 27);
         }
         .form input{
@@ -97,13 +98,39 @@
 </head>
 
 <body>
+
+    <header>
+        <nav class="nav-bar">
+
+            <h2 class="comic-font brand"> <span class="color"><span class="b">B</span>4</span> STYLE</h2>
+
+            <ul class="comic-font text">
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="collection.html">Collection</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a class="colors" href="index.html">Sign Up</a>
+                </li>
+            </ul>
+
+
+        </nav>
+    </header>
+
+
     <section class="login-form">
 
 
 
         <div class="form">
 
-            <h3 class="comic-font"> <span>Please</span>_Login </h3>
+            <h3 class="comic-font"> <span class="com">Please</span>_Login </h3>
 
             <input class="one comic-font" type="text" name="text" id="" placeholder="Enter your name" required>
             <input class="one comic-font" type="email" name="email" id="" placeholder="Your Email" required>
