added on some style or html update

--- a/login.html
+++ b/login.html
@@ -72,7 +72,9 @@
         }
 
        .com {
-            color: rgb(184, 184, 27);
+            color: rgb(55, 82, 255);
+            font-size:35px ;
+
         }
         .form input{
             border-radius: 5px;
@@ -130,7 +132,7 @@
 
         <div class="form">
 
-            <h3 class="comic-font"> <span class="com">Please</span>_Login </h3>
+            <h3 class="comic-font "> <span class="com">Please</span>_Login </h3>
 
             <input class="one comic-font" type="text" name="text" id="" placeholder="Enter your name" required>
             <input class="one comic-font" type="email" name="email" id="" placeholder="Your Email" required>
