added all the new added tag style and more other just add and add some change or some images icons just all all new update

--- a/about.html
+++ b/about.html
@@ -1,36 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About B4 Style </title>
     <link rel="stylesheet" href="styles/nav.css">
-</head>
-<body>
-     <nav class="nav-bar">
 
-            <h2 class="comic-font brand"> <span class="color"><span class="b">B</span>4</span> STYLE</h2>
+    <style>
+        main {
+            margin-top: 100px;
+            height: auto;
+            display: flex;
+            justify-content: center;
 
-            <ul class="comic-font text">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="collection.html">Collection</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                    <a class="colors" href="login.html">Login</a>
-                </li>
-            </ul>
+        }
+
+        .about-us {
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 40px;
+            font-weight: 800;
+            background-color: aquamarine;
+        }
+
+        .about {
+            text-align: start;
+            width: 50%;
+        }
+
+        .about-subtitle {
+            font-size: 19px;
+            font-weight: 600;
+            line-height: 32px;
+        }
+
+        .about-head {
+            font-size: 22px;
+            font-weight: 600;
+
+        }
+
+        .abouts-head{
+            width: 50%;
+            color: black;
+        }
+
+        .head-subtitle {
+            font-size: 25px;
+            color: rgb(38, 38, 38);
+            line-height: 42px;
+        }
 
 
-        </nav>
+        .intro-head {
+            text-align: center;
+        }
 
-        <main>
+        .all-head {
+            background-color: rgba(37, 37, 37, 0.945);
+            color: rgb(255, 64, 6);
+            padding: 12px;
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+        }
+
+
+
+        @media screen and (max-width:576px) {
+
+            .about{
+                width: 100%;
+            }
+            .about-subtitle{
+
+                font-size: 20px;
+            color: rgb(38, 38, 38);
+            line-height: 30px;
+
+            }
             
-        </main>
+        }
+    </style>
+</head>
+
+<body>
+    <nav class="nav-bar">
+
+        <h2 class="comic-font brand"> <span class="color"><span class="b">B</span>4</span> STYLE</h2>
+
+        <ul class="comic-font text">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="collection.html">Collection</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+            <li>
+                <a class="colors" href="login.html">Login</a>
+            </li>
+        </ul>
+
+
+    </nav>
+
+    <main>
+        <section class="about">
+
+            <h1 class="about-us">About Us</h1>
+
+            <div class="intro-head">
+
+                <h1 class="about-head ">Welcome to B4 Style – Born for Style</h1>
+                <hr class="abouts-head">
+                <p class="about-subtitle">At B4 Style, we believe fashion is not just about clothing—it's a statement, a
+                    mindset, and a reflection of your identity. Founded in Chittagong, Bangladesh, our brand was born
+                    from a passion for style, individuality, and confidence.</p>
+            </div>
+
+            <div class="who-we">
+                <hr>
+                <h1 class="who-head all-head">👤 Who We Are</h1>
+                <p class="who-subtitle head-subtitle"> <strong>B4 Style</strong> is the creative vision of two
+                    passionate individuals:
+                </p>
+                <h3 class="number">🧑 Mustafa Tazwer Shakil (📞 01310079634)</h3>
+                <h3 class="number">🧑 Iftekar Alam Opu (📞 01820062621)</h3>
+            </div>
+
+            <div class="mission">
+                <h1 class="mission-title all-head">🎯 Our Mission</h1>
+                <p class="mission-subtitle head-subtitle"> Our mission is simple: to provide high-quality, trend-forward
+                    fashion that
+                    inspires you to embrace your unique style. Whether you're dressing for a regular day out or a
+                    standout event, <strong>B4 Style</strong> has something that fits not just your body, but your
+                    personality.</p>
+            </div>
+
+            <div class="why-us">
+
+                <h1 class="all-head">💎 Why Choose Us?</h1>
+                <ul class="head-subtitle">
+                    <li> <strong>Bangladeshi Pride:</strong> Homegrown in BD, with a heart rooted in Chittagong.</li>
+                    <li> <strong>Affordable Fashion:</strong> Style that speaks volumes—without breaking the bank.
+                    </li>
+                    <li> <strong>Customer-Focused:</strong> Your satisfaction is our top priority.</li>
+                    <li> <strong>Exclusive Collections:</strong> Carefully curated pieces that are as unique as you
+                        are.</li>
+                </ul>
+
+            </div>
+
+            <div class="our-journey">
+                <h1 class="journey-title all-head">🚀 Join Our Style Journey</h1>
+
+                <p class="journey-subtitle head-subtitle">We’re more than a brand—we’re a movement. A movement for those
+                    <strong>born
+                        for style</strong>, ready to stand out, take risks, and own their look. <br>
+
+                    Follow us, wear us, and grow with us. Because at <strong>B4 Style</strong>, you don't follow
+                    trends—you set them.</p>
+            </div>
+
+
+        </section>
+
+    </main>
 </body>
+
 </html>
