--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact B4 style  </title>
+    <title>Contact B4 style </title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+
     <link rel="stylesheet" href="styles/nav.css">
+
+
+    <style>
+        .Contract {
+            margin: 0 auto;
+            margin-top: 100px;
+            
+        }
+
+        .heading {
+            text-align: center;
+        }
+
+        .header {
+            font-size: 40px;
+            font-weight: 800;
+            background-color: aquamarine;
+        }
+
+        .head-subtitle {
+            font-size: 20px;
+            font-weight: 700;
+        }
+
+        .head {
+            background-color: rgba(37, 37, 37, 0.945);
+            color: rgb(255, 64, 6);
+            padding: 12px;
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+
+        }
+
+        .Contract {
+            width: 50%;
+
+        }
+
+        .head-title {
+            font-size: 21px;
+            font-family: "Raleway", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 600;
+        }
+
+        .head-boss {
+            font-size: 25px;
+
+            color: rgb(38, 38, 38);
+            
+        }
+
+        .head-title>li a {
+            text-decoration: none;
+            color: black;
+
+        }
+
+        .head-title>li {
+            padding-bottom: 10px;
+        }
+
+        .down {
+            text-align: center;
+        }
+
+        @media screen and (max-width:576px) {
+
+
+
+            .Contract {
+                width: 100%;
+
+
+            }
+
+            .head-title {
+                font-size: 20px;
+                font-family: "Raleway", sans-serif;
+                font-optical-sizing: auto;
+                font-weight: 600;
+            }
+
+            .header {
+                font-size: 30px;
+                font-weight: 800;
+                background-color: aquamarine;
+            }
+
+            .head-subtitle {
+                font-size: 20px;
+                font-weight: 700;
+            }
+
+
+
+        }
+    </style>
+
 </head>
+
 <body>
     <nav class="nav-bar">
 
-            <h2 class="comic-font brand"> <span class="color"><span class="b">B</span>4</span> STYLE</h2>
+        <h2 class="comic-font brand"> <span class="color"><span class="b">B</span>4</span> STYLE</h2>
 
-            <ul class="comic-font text">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="collection.html">Collection</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a class="colors" href="login.html">Login</a>
-                </li>
-            </ul>
+        <ul class="comic-font text">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="collection.html">Collection</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a class="colors" href="login.html">Login</a>
+            </li>
+        </ul>
 
 
-        </nav>
+    </nav>
+
+    <main class="Contract">
+        <section class="father">
+
+            <div class="heading">
+                <h1 class="header">Contact Us</h1>
+                <p class="head-subtitle">At B4 Style, we value every connection. Whether you're a customer, a
+                    collaborator, or just someone who
+                    loves fashion as much as we do—we're here to help. Reach out to us for inquiries about our products,
+                    order support, business opportunities, or feedback.</p>
+
+            </div>
+            <div class="details">
+                <hr>
+                <div class="phone">
+                    <h1 class="head">📞 Phone Support</h1>
+                    <p class="head-title">Feel free to call us directly during business hours (10 AM – 8 PM, BD Time):
+                        <br>
+                        <br>
+                        <span class="head-boss">1. Mustafa Tazwer Shakil (Owner) </span><br>
+                        📱 01310079634
+                        <br>
+                        <br>
+                        <span class="head-boss"> 2. Iftekar Alam Opu (Co-Owner)</span> <br>
+                        📱 01820062621
+                    </p>
+                </div>
+
+                <div class="address">
+                    <h1 class="head"> 📍 Office Address</h1>
+
+                    <p class="head-title"><span class="head-boss">Full Address:</span> Potiya,Chittagong, Bangladesh
+                    </p>
+                </div>
+
+                <div class="email">
+                    <h1 class="head">📧 Email Support</h1>
+
+                    <p class="head-title"> <span class="head-boss">Our Business Email :</span>
+                        tazwershakilshakil@gmail.com</p>
+
+                </div>
+
+                <div class="social">
+
+                    <h1 class="head">💬 Social Media</h1>
+
+                    <p class="head-title head-boss">Follow and connect with us on your favorite platforms:</p>
+                    <ul class="head-title">
+                        <li> <a href="https://www.facebook.com/" target="_blank"> <i class="fab fa-facebook"
+                                    style="margin-right: 8px; color: #1877f2;"></i>B4 Style_Facebook</a></li>
+
+                        <li> <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram"
+                                    style="margin-right: 8px; color: #E1306C;"></i>B4 Style_Instagram</a></li>
+
+                        <li> <a href="https://www.tiktok.com/en/" target="_blank"> <i class="fab fa-tiktok"
+                                    style="margin-right: 8px; color: #000000;"></i>B4 Style_TikTok</a></li>
+                    </ul>
+
+                </div>
+
+                <div class="down">
+                    <hr>
+                    <p class="head-title">Your feedback and support inspire us. Let’s build something stylish together.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
