added on all the new update tag,style,change,add,background,media screen, all the tag change update add cut new add new change just add all all the html and css file just add

--- a/collection.html
+++ b/collection.html
@@ -81,7 +81,7 @@
      font-optical-sizing: auto;
      text-align: center;
      color: rgb(255, 90, 29);
-     background-color: rgba(255, 255, 255, 0.908);
+     background-color: rgba(0, 0, 0, 0.908);
      padding-bottom: 10px;
      padding-top: 10px;
      border-radius: 0px;
@@ -175,7 +175,7 @@
                 <div class="style-card">
                     <img src="images/black.png" alt="">
                     <h1 class="product">Black Drop-Shoulder </h1>
-                    <h2 class="price">Price :350$ </h2>
+                    <h2 class="price">Price : ৳350 </h2>
                     <button class="buy" type="button">BUY NOW</button>
                 </div>
 
@@ -183,14 +183,14 @@
                     <img src="images/green.png" alt="">
                     <h1 class="product" >Green Drop-Shoulder</h1>
 
-                    <h2 class="price">Price :350$ </h2>
+                    <h2 class="price">Price : ৳350</h2>
                     <button class="buy" type="button">BUY NOW</button>
                 </div>
 
                 <div class="style-card">
                     <img src="images/yellow.png" alt="">
                     <h1 class="product">Yellow Drop-Shoulder</h1>
-                   <h2 class="price">Price :350$ </h2>
+                   <h2 class="price">Price : ৳350</h2>
                   <button class="buy" type="button">BUY NOW</button>
                 </div>
 
@@ -198,7 +198,7 @@
                 <div class="style-card">
                     <img src="images/white.png" alt="">
                     <h1 class="product">White Drop-Shoulder</h1>
-                   <h2 class="price">Price :350$ </h2>
+                   <h2 class="price">Price : ৳350 </h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
 
@@ -206,86 +206,86 @@
                 <div class="style-card">
                     <img src="images/blue.png" alt="">
                     <h1 class="product">Blue Drop-Shoulder</h1>
-                  <h2 class="price">Price :350$ </h2>
+                  <h2 class="price">Price : ৳350 </h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
 
                 <div class="style-card">
                     <img src="images/chocholate.png" alt="">
                     <h1 class="product">Chocolate Drop-Shoulder</h1>
-                  <h2 class="price">Price :350$ </h2>
+                  <h2 class="price">Price : ৳350</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/gray.png" alt="">
                     <h1 class="product">Gray Drop-Shoulder</h1>
-                  <h2 class="price">Price :350$ </h2>
+                  <h2 class="price">Price : ৳350</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/t-shirt.jpeg" alt="">
                     <h1 class="product">New T-Shirt</h1>
-                  <h2 class="price">Price :300$ </h2>
+                  <h2 class="price">Price : ৳300 </h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/2 color.png" alt="">
                     <h1 class="product">New Drop-Shoulder</h1>
-                  <h2 class="price">Price :380$ </h2>
+                  <h2 class="price">Price : ৳380</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/baston.jpg" alt="">
                     <h1 class="product">New Drop-Shoulder</h1>
-                  <h2 class="price">Price :400$ </h2>
+                  <h2 class="price">Price : ৳400</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/blue -beston.jpg" alt="">
                     <h1 class="product"> New Drop-Shoulder</h1>
-                  <h2 class="price">Price :400$ </h2>
+                  <h2 class="price">Price :৳400 </h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/black-t.jpg" alt="">
                     <h1 class="product">Black T-Shirt</h1>
-                  <h2 class="price">Price :300$ </h2>
+                  <h2 class="price">Price :৳300</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/cho-polo.jpg" alt="">
                     <h1 class="product">New Polo-Shirt</h1>
-                  <h2 class="price">Price :580$ </h2>
+                  <h2 class="price">Price : ৳580</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/nevy-polo.jpg" alt="">
                     <h1 class="product">New Polo-Shirt</h1>
-                  <h2 class="price">Price :580$ </h2>
+                  <h2 class="price">Price : ৳580</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/black-polo.jpg" alt="">
                     <h1 class="product">New Polo-Shirt</h1>
-                  <h2 class="price">Price :580$ </h2>
+                  <h2 class="price">Price :৳580 </h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/green-milando.jpg" alt="">
                     <h1 class="product">New Drop Shoulder</h1>
-                  <h2 class="price">Price :400$ </h2>
+                  <h2 class="price">Price :৳400 </h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/red-milando.jpg" alt="">
                     <h1 class="product">New Drop Shoulder</h1>
-                  <h2 class="price">Price :400$ </h2>
+                  <h2 class="price">Price :৳400 </h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
                 <div class="style-card">
                     <img src="images/diferent.jpeg" alt="">
                     <h1 class="product">New T-Shirt</h1>
-                  <h2 class="price">Price :380$ </h2>
+                  <h2 class="price">Price :৳380</h2>
                    <button class="buy" type="button">BUY NOW</button>
                 </div>
           
@@ -299,6 +299,32 @@
         </section>
 
     </main>
+
+      <section>
+
+              <div class="footer-part">
+
+            <div class="last">
+
+                <p class="copy">&copy; 2025 B4 Style. All rights reserved.</p>
+
+                <p class="icons">
+
+                    <span class="big">Follow us: </span>
+
+                     <a href="https://www.facebook.com/"><img width="35px" src="images/facebook.png" alt=""> </a>
+                     <a href="https://www.instagram.com/"><img width="35px" src="images/Instagram.png" alt=""></a>
+                     <a href="https://www.tiktok.com/en/"> <img width="35px" src="images/tiktok.png" alt=""> </a>
+                     <a href="https://x.com/"> <img width="35px" src="images/twitter.png" alt=""> </a>
+
+                    
+                </p>
+
+            </div>
+
+        </div>
+
+</section>
 
 </body>
 </html>
