--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,11 @@
             font-family: "Raleway", sans-serif;
             font-optical-sizing: auto;
             font-weight: 600;
+            line-height: 30px;
         }
 
         .head-boss {
             font-size: 25px;
-
             color: rgb(38, 38, 38);
             
         }
@@ -78,11 +78,8 @@
 
         @media screen and (max-width:576px) {
 
-
-
             .Contract {
                 width: 100%;
-
 
             }
 
@@ -97,14 +94,15 @@
                 font-size: 30px;
                 font-weight: 800;
                 background-color: aquamarine;
+                padding-top: 15px;
+                padding-bottom: 15px;
             }
 
             .head-subtitle {
-                font-size: 20px;
+                font-size: 21px;
                 font-weight: 700;
+                line-height: 30px;
             }
-
-
 
         }
     </style>
@@ -130,7 +128,6 @@
                 <a class="colors" href="login.html">Login</a>
             </li>
         </ul>
-
 
     </nav>
 
@@ -203,6 +200,33 @@
             </div>
         </section>
     </main>
+
+
+      <section>
+
+              <div class="footer-part">
+
+            <div class="last">
+
+                <p class="copy">&copy; 2025 B4 Style. All rights reserved.</p>
+
+                <p class="icons">
+
+                    <span class="big">Follow us: </span>
+
+                     <a href="https://www.facebook.com/"><img width="35px" src="images/facebook.png" alt=""> </a>
+                     <a href="https://www.instagram.com/"><img width="35px" src="images/Instagram.png" alt=""></a>
+                     <a href="https://www.tiktok.com/en/"> <img width="35px" src="images/tiktok.png" alt=""> </a>
+                     <a href="https://x.com/"> <img width="35px" src="images/twitter.png" alt=""> </a>
+              
+                </p>
+
+            </div>
+
+        </div>
+
+</section>
+
 </body>
 
 </html>
